<resources>
    <string name="app_name">Ispitni zadatak -Anime API</string>
    <string name="home">Home</string>
    <string name="trending_anime">Trending Anime</string>
    <string name="app_logo">App logo</string>
    <string name="appLogoName">My Anime List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="trending_anime_header">Trending Anime</string>
    <string name="search_anime">Search Anime</string>
    <string name="anime_image">anime-image</string>
    <string name="anime_cover">anime cover</string>
    <string name="see_details">See details</string>
    <string name="detailed_anime">Detailed Anime</string>
    <string name="search_results">Search Results</string>
    <string name="enter_anime_title">Enter anime title</string>
    <string name="choose_anime_rating">Choose Anime Rating</string>
    <string name="search_anime_by_filters">Search Anime By Filters</string>
    <string name="choose_order">Choose Order</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="incorrectUsername">Username must be at least 5 characters long consisting of letters only</string>
    <string name="incorrectEmail">Your email address must be a valid email</string>
    <string name="currently_airing">Currently Airing</string>
    <string name="detailed_anime_cover">Detailed anime cover</string>
    <string name="anime_detailed_cover">Anime detailed cover</string>
    <string name="synopsis">Synopsis</string>
    <string name="set_as_favourite">Set as favourite</string>
    <string name="profile">Profile</string>
    <string name="welcome_to_myanimelist">Welcome to MyAnimeList</string>
    <string name="the_only_application_you_ll_ever_need_to_consume_your_favourite_anime_content">The only application you\'ll ever need to consume your favourite anime content</string>
    <string name="_1_search_anime_by_criteria_and_explore_the_anime_world_of_over_24000_different_anime_s">1) Search anime by criteria and explore the anime world of over 24000+ different anime\'s</string>
    <string name="_2_set_your_favourite_anime_and_view_it_quickly_trough_the_profile_section">2) Set your favourite anime and view it quickly trough the profile section</string>
    <string name="what_are_you_waiting_for_lets_begin">What are you waiting for? Lets begin!</string>
    <string name="enter_your_username_here">Enter your username here</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="submit">Submit</string>
    <string name="before_giving_you_access_to_application_we_ve_gotta_know_a_bit_more_about_you_please_enter_the_data_below">Before giving you access to application we\'ve gotta know a bit more about you, please enter the data below</string>
    <string name="recommendations">Recommendations</string>
    <string name="recommendations_are">Recommended anime:</string>
    <string name="profile_overview">Profile overview</string>
    <string name="profile_avatar">Profile avatar</string>
    <string name="favourite_anime">Favourite Anime</string>
    <string name="remove_favourite">Remove favourite</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="score">Score</string>
    <string name="genre">Genre:</string>
    <string name="episodes">Episodes</string>
    <string name="ratingIcon">Rating icon</string>
    <string name="episodeIcon">Episode icon</string>
    <string name="viewersIcon">Viewers Icon</string>
    <string name="viewers">Viewers</string>
    <string name="no_anime_to_recommend">No anime to recommend, please choose your favourite anime</string>
    <string name="you_don_t_have_a_favourite_anime_set">You don\'t have a favourite anime set.</string>
    <string name="comments">Comments</string>
    <string name="close">close</string>
    <string name="dummyUsername">Adzand312</string>
    <string name="dummyReview">Click to see anime reviews</string>
    <string name="dummyPlaceholderProfile">User profile pic\n</string>
    <string name="noReviews">No reviews for this anime</string>
    <string name="favouriteAnimePicture">Favourite anime picture</string>
    <string name="choose_genre">Choose Genre</string>
    <string name="no_anime_trailer_available">No anime trailer available</string>

</resources>