<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailedAnime">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/animeTrailerlayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonAddFavourite">

                <WebView
                    android:id="@+id/animeTrailer"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:background="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.489"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.90" />

                <TextView
                    android:id="@+id/trailerErrorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/no_anime_trailer_available"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="20sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/detailedAnimeImage"
                android:layout_width="221dp"
                android:layout_height="331dp"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/anime_detailed_cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelDetailedAnimeTitle"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailedAnimeImage" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="413dp"
                android:layout_height="117dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelDetailedAnimeTitle">

                <LinearLayout
                    android:id="@+id/numberOfEpisodesLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/ratingLayout"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/iconNumberOfEpisodes"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:contentDescription="@string/episodeIcon"
                        android:src="@drawable/baseline_live_tv_24" />

                    <TextView
                        android:id="@+id/detailedAnimeNumberOfEpisodes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/labelDetailedAnimeNumberOfEpisodes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/episodes"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ratingLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/viewersLayout"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@id/numberOfEpisodesLayout">

                    <ImageView
                        android:id="@+id/iconRating"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:contentDescription="@string/ratingIcon"
                        android:src="@android:drawable/btn_star_big_on" />

                    <TextView
                        android:id="@+id/ratingCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/labelDetailedAnimeRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/score"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/viewersLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@id/ratingLayout">

                    <ImageView
                        android:id="@+id/viewersIcon"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:contentDescription="@string/viewersIcon"
                        android:src="@drawable/views"
                        app:tint="?attr/iconFillColor" />

                    <TextView
                        android:id="@+id/viewersCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/labelDetailedViewersCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/viewers"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAddFavourite"
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/set_as_favourite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout" />

            <androidx.cardview.widget.CardView
                android:id="@+id/openComments"
                android:layout_width="340dp"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animeTrailerlayout"
                app:strokeColor="@android:color/black"
                app:strokeWidth="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/commentSectionLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/comments"
                        android:textAlignment="textStart"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/reviewPlaceholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/dummyReview"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.136"
                        app:layout_constraintStart_toEndOf="@+id/commentPlaceholderProfile"
                        app:layout_constraintTop_toBottomOf="@+id/usernamePlaceholder" />

                    <ImageView
                        android:id="@+id/commentPlaceholderProfile"
                        android:layout_width="65dp"
                        android:layout_height="57dp"
                        android:layout_marginStart="4dp"
                        android:contentDescription="@string/dummyPlaceholderProfile"
                        android:src="@drawable/ic_baseline_profile"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/commentSectionLabel"
                        app:layout_constraintVertical_bias="0.272" />

                    <TextView
                        android:id="@+id/usernamePlaceholder"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/dummyUsername"
                        app:layout_constraintStart_toStartOf="@+id/reviewPlaceholder"
                        app:layout_constraintTop_toBottomOf="@+id/commentSectionLabel"
                        tools:ignore="TextSizeCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/synopsisLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/openComments"
                tools:layout_editor_absoluteX="-14dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/synopsis"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/labelDetailedAnimeSynopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:lineSpacingExtra="8sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>
