<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/anime_image"
        android:layout_width="181dp"
        android:layout_height="159dp"
        android:contentDescription="@string/anime_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/buttonDetails"
        app:layout_constraintStart_toStartOf="@+id/buttonDetails"
        app:layout_constraintTop_toBottomOf="@+id/labelAnimeTitle"
        app:layout_constraintVertical_bias="0.473" />

    <TextView
        android:id="@+id/labelAnimeScore"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="5dp"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonDetails"
        app:layout_constraintStart_toEndOf="@+id/textViewScore"
        app:layout_constraintTop_toBottomOf="@+id/labelAnimeTitle"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/labelAnimeTitle"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/anime_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/anime_image" />
</androidx.constraintlayout.widget.ConstraintLayout>